@@ -230,8 +230,8 @@ public class ExportMetsWithoutHibernate {
 			if (!location.contains("://")) {
 				location = "file://" + location;
 			}
-			URL url = new URL(location);
-			File f = new File(imageFolder, url.getFile());
+			String url = new URL(location).getFile();
+			File f = new File(!url.startsWith(imageFolder.toURL().getPath()) ? imageFolder : null, url);
 			cf.setLocation(f.toURI().toString());
 		}
 
